--- a/project/project.vcxproj.filters
+++ b/project/project.vcxproj.filters
@@ -72,6 +72,9 @@
     <ClInclude Include="NotEnoughCoins.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Table.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Player.cpp">
